# fastris

./: Cargo.toml  PCO_IJIT.flat  README.md  my_type_formatters.txt
src/: board.rs  client.fbs  client.rs  client_examples.rs  client_generated.rs  connection.rs  example_client.rs  flatc_gogogo.bat  lib.rs  main.rs  monster_generated.rs  versus.rs
tests/: board_tests.rs  versus_tests.rs
tests/test_data/: PCO_IIJT.flat  PCO_IILO.flat  PCO_IIOJ.flat  PCO_IIOL.flat  PCO_IISJ.flat  PCO_IITJ.flat  PCO_IITL.flat  PCO_IITO.flat  PCO_IITS.flat  PCO_IIZL.flat  PCO_IJIT.flat  PCO_IJOT.flat  PCO_IJTO.flat  PCO_IJTS.flat  PCO_IJTZ.flat  PCO_IJZS.flat  PCO_ILIO.flat  PCO_ILIT.flat  PCO_ILIZ.flat  PCO_ILOS.flat  PCO_ILOT.flat  PCO_ILTI.flat  PCO_ILTJ.flat  PCO_ILTZ.flat  PCO_ILZI.flat  PCO_ILZT.flat  PCO_IOIJ.flat  PCO_IOJI.flat  PCO_IOJS.flat  PCO_IOJT.flat  PCO_IOSJ.flat  PCO_IOTJ.flat  PCO_ISIJ.flat  PCO_ISJI.flat  PCO_ISJT.flat  PCO_ISOJ.flat  PCO_ISTI.flat  PCO_ISTJ.flat  PCO_ISTL.flat  PCO_ISTO.flat  (+125 more)
