[package]
name = "fastris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
bytes = "1.4.0"
clap = { version = "4.3.12", features = ["derive"] }
flatbuffers = "23.5.26"
futures = "0.3.28"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_xorshift = "0.3.0"
tokio =  { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[[bin]]
name="hard_drop_client"
path="src/bin/hard_drop_client.rs"